change page rko

--- a/src/html/rko.html
+++ b/src/html/rko.html
@@ -85,6 +85,91 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="document-list">
+                            <div class="document-list__wrapper">
+                                <div class="document-list">
+                                    <div class="document-list__title">
+                                        <span>
+                                            Тарифы
+                                        </span>
+                                    </div>
+                                    <div class="document-list__block block">
+                                        <div class="block__document">
+                                            <div class="block__document__content-wrapper">
+                                                <div class="block__document__icon">
+                                                    <img src="../assets/img/images/pdf.png" alt="pdf">
+                                                </div>
+                                                <div class="block__document__text-wrapper">
+                                                    <div class="block__document__title">
+                                                        <span>Тарифы за услуги физическим лицам по расчетно-кассовому
+                                                            обслуживанию (до 01.04.2022)</span>
+                                                    </div>
+                                                    <div class="block__document__description">
+                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="block__document">
+                                            <div class="block__document__content-wrapper">
+                                                <div class="block__document__icon">
+                                                    <img src="../assets/img/images/pdf.png" alt="pdf">
+                                                </div>
+                                                <div class="block__document__text-wrapper">
+                                                    <div class="block__document__title">
+                                                        <span>Тарифы комиссионного вознаграждения за предоставление
+                                                            услуги консультационного обслуживания VIP — клиентов</span>
+                                                    </div>
+                                                    <div class="block__document__description">
+                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="block__document" data-readmore-identifier="doc-list-readmore">
+                                            <div class="block__document__content-wrapper">
+                                                <div class="block__document__icon">
+                                                    <img src="../assets/img/images/word.png" alt="pdf">
+                                                </div>
+                                                <div class="block__document__text-wrapper">
+                                                    <div class="block__document__title">
+                                                        <span>Общие условия комплексного банковского обслуживания</span>
+                                                    </div>
+                                                    <div class="block__document__description">
+                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="block__document" data-readmore-identifier="doc-list-readmore">
+                                            <div class="block__document__content-wrapper">
+                                                <div class="block__document__icon">
+                                                    <img src="../assets/img/images/pdf.png" alt="pdf">
+                                                </div>
+                                                <div class="block__document__text-wrapper">
+                                                    <div class="block__document__title">
+                                                        <span>Перечень страховых организаций, удовлетворяющих
+                                                            требованиям Банка</span>
+                                                    </div>
+                                                    <div class="block__document__description">
+                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- data-readmore-identifier="doc-list-readmore" -->
+
+                                    </div>
+                                </div>
+                                <div class="document-list__read-more read-more__wrapper">
+                                    <div class="read-more readmore" id="doc-list-readmore">
+                                        <span class="read-more__text-more">Смотреть все</span>
+                                        <span class="read-more__text-less">Скрыть</span>
+                                        <img src="../assets/img/svg/read-more-btn.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
