--- a/src/html/rko.html
+++ b/src/html/rko.html
@@ -1,4 +1,4 @@
-    <%- include('inc/header.html') %>
+<%- include('inc/header.html') %>
     <%- include('inc/private-menu.html') %>
         <div id="info" data-current-id="rko" data-main-menu-current-id="banking-head"></div>
         <!-- Main content-->
@@ -32,7 +32,7 @@
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="">Премиальный пластиковые карты</a>
+                                    <a href="">Премиальные пластиковые карты</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
@@ -46,127 +46,101 @@
                         </div>
                     </div>
                     <div class="page__content basic-page">
-                        <div class="basic-page__wrap">
-                            <div class="basic-page__body rko">
-                                <div class="rko__title">
-                                    <h3>Расчетно-кассовое обслуживание в банке МФК включает в себя классические
-                                        банковские услуги</h3>
+                        <div class="garanty__card rko--card">
+                            <div class="garanty__title-wrapper">
+                                <div class="garanty__title text--uppercase">
+                                    <span>Расчетно-кассовое обслуживание в банке МФК включает в себя классические
+                                        банковские услуги:</span>
                                 </div>
-                                <div class="rko__list">
-                                    <ul>
-                                        <li class="rko__item">
-                                            <p>открытие и ведение банковских счетов в рублях и иностранной валюте;</p>
-                                        </li>
-                                        <li class="rko__item">
-                                            <p>осуществление банковских переводов по оптимальным маршрутам в рублях и
-                                                иностранной валюте;</p>
-                                        </li>
-                                        <li class="rko__item">
-                                            <p>оплата регулярных расходов по генеральным поручениям в автоматическом
-                                                режиме;</p>
-                                        </li>
-                                        <li class="rko__item">
-                                            <p>розыск сумм, изменение условий и отзыв перевода;</p>
-                                        </li>
-                                        <li class="rko__item">
-                                            <p>предоставление по телефонной, электронной и факсимильной связи
-                                                оперативной информации об операциях и остатке на счетах с
-                                                учетом требований безопасности;</p>
-                                        </li>
-                                        <li class="rko__item">
-                                            <p>конверсионные и валютно-обменные операции по предварительному заказу и
-                                                согласованному курсу;</p>
-                                        </li>
-                                        <li class="rko__item">
-                                            <p>кассовое обслуживание в рублях и иностранной валюте, экспертиза денежных
-                                                знаков.</p>
-                                        </li>
-                                    </ul>
+                            </div>
+                            <div class="garanty__advantages">
+                                <div class="garanty__advantage">
+                                    <span>открытие и ведение банковских счетов в рублях и иностранной валюте;</span>
+                                </div>
+                                <div class="garanty__advantage">
+                                    <span>осуществление банковских переводов по оптимальным маршрутам в рублях и
+                                        иностранной валюте;</span>
+                                </div>
+                                <div class="garanty__advantage">
+                                    <span>оплата регулярных расходов по генеральным поручениям в автоматическом
+                                        режиме;</span>
+                                </div>
+                                <div class="garanty__advantage">
+                                    <span>розыск сумм, изменение условий и отзыв перевода;</span>
+                                </div>
+                                <div class="garanty__advantage">
+                                    <span>предоставление по телефонной, электронной и факсимильной связи
+                                        оперативной информации об операциях и остатке на счетах с
+                                        учетом требований безопасности;</span>
+                                </div>
+                                <div class="garanty__advantage">
+                                    <span>конверсионные и валютно-обменные операции по предварительному заказу и
+                                        согласованному курсу;</span>
+                                </div>
+                                <div class="garanty__advantage">
+                                    <span>кассовое обслуживание в рублях и иностранной валюте, экспертиза денежных
+                                        знаков.</span>
                                 </div>
                             </div>
                         </div>
-                        <div class="document-list">
-                            <div class="document-list__wrapper">
-                                <div class="document-list">
-                                    <div class="document-list__title">
-                                        <span>
+                        <div class="operations__documentation rko--docs">
+                            <div class="operations__documentation-nav">
+                                <div class="operations__docs">
+                                    <div>
+                                        <h3 class="operations__documentation-title">
                                             Тарифы
-                                        </span>
+                                        </h3>
                                     </div>
-                                    <div class="document-list__block block">
-                                        <div class="block__document">
-                                            <div class="block__document__content-wrapper">
-                                                <div class="block__document__icon">
-                                                    <img src="../assets/img/images/pdf.png" alt="pdf">
+                                    <div class="operations__documentation-list">
+                                        <div class="operations__documentation-kind active" id="docs-item">
+                                            <div class="operations__documentation-file">
+                                                <img src="../assets/img/images/word.png" alt="pdf" width="24px"
+                                                    height="30px">
+                                                <div class="operations__documentation-content">
+                                                    <H5 class="operations__documentation-description">
+                                                        Тарифы комиссионного вознаграждения за предоставление услуги
+                                                        консультационного обслуживания VIP — клиентов 
+                                                    </H5>
+                                                    <p class="operations__documentation-caracter">
+                                                        PDF, 279 КБ / 04 июня 2018
+                                                    </p>
                                                 </div>
-                                                <div class="block__document__text-wrapper">
-                                                    <div class="block__document__title">
-                                                        <span>Тарифы за услуги физическим лицам по расчетно-кассовому
-                                                            обслуживанию (до 01.04.2022)</span>
-                                                    </div>
-                                                    <div class="block__document__description">
-                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
-                                                    </div>
+                                            </div>
+                                            <div class="operations__documentation-file">
+                                                <img src="../assets/img/images/word.png" alt="pdf" width="24px"
+                                                    height="30px">
+                                                <div class="operations__documentation-content">
+                                                    <H5 class="operations__documentation-description">
+                                                        Тарифы комиссионного вознаграждения за предоставление услуги
+                                                        консультационного обслуживания VIP — клиентов
+                                                    </H5>
+                                                    <p class="operations__documentation-caracter">
+                                                        PDF, 279 КБ / 04 июня 2018
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="operations__documentation-file"
+                                                data-readmore-identifier="doc-list-readmore">
+                                                <img src="../assets/img/images/pdf.png" alt="pdf" width="24px"
+                                                    height="30px">
+                                                <div class="operations__documentation-content">
+                                                    <H5 class="operations__documentation-description">
+                                                        Правила дистанционного банковского обслуживания
+                                                    </H5>
+                                                    <p class="operations__documentation-caracter">
+                                                        PDF, 279 КБ / 04 июня 2018
+                                                    </p>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="block__document">
-                                            <div class="block__document__content-wrapper">
-                                                <div class="block__document__icon">
-                                                    <img src="../assets/img/images/pdf.png" alt="pdf">
-                                                </div>
-                                                <div class="block__document__text-wrapper">
-                                                    <div class="block__document__title">
-                                                        <span>Тарифы комиссионного вознаграждения за предоставление
-                                                            услуги консультационного обслуживания VIP — клиентов</span>
-                                                    </div>
-                                                    <div class="block__document__description">
-                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="block__document" data-readmore-identifier="doc-list-readmore">
-                                            <div class="block__document__content-wrapper">
-                                                <div class="block__document__icon">
-                                                    <img src="../assets/img/images/word.png" alt="pdf">
-                                                </div>
-                                                <div class="block__document__text-wrapper">
-                                                    <div class="block__document__title">
-                                                        <span>Общие условия комплексного банковского обслуживания</span>
-                                                    </div>
-                                                    <div class="block__document__description">
-                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="block__document" data-readmore-identifier="doc-list-readmore">
-                                            <div class="block__document__content-wrapper">
-                                                <div class="block__document__icon">
-                                                    <img src="../assets/img/images/pdf.png" alt="pdf">
-                                                </div>
-                                                <div class="block__document__text-wrapper">
-                                                    <div class="block__document__title">
-                                                        <span>Перечень страховых организаций, удовлетворяющих
-                                                            требованиям Банка</span>
-                                                    </div>
-                                                    <div class="block__document__description">
-                                                        <span>PDF, 279 КБ / 04 июня 2018</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- data-readmore-identifier="doc-list-readmore" -->
-
                                     </div>
                                 </div>
-                                <div class="document-list__read-more read-more__wrapper">
-                                    <div class="read-more readmore" id="doc-list-readmore">
-                                        <span class="read-more__text-more">Смотреть все</span>
-                                        <span class="read-more__text-less">Скрыть</span>
-                                        <img src="../assets/img/svg/read-more-btn.svg" alt="">
-                                    </div>
+                            </div>
+                            <div class="document-list__read-more read-more__wrapper">
+                                <div class="read-more readmore" id="doc-list-readmore">
+                                    <span class="read-more__text-more">Смотреть все</span>
+                                    <span class="read-more__text-less">Скрыть</span>
+                                    <img src="../assets/img/svg/read-more-btn.svg" alt="">
                                 </div>
                             </div>
                         </div>
