--- a/src/html/rko.html
+++ b/src/html/rko.html
@@ -32,13 +32,13 @@
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="">Премиальные пластиковые карты</a>
+                                    <a href="premiumcards.html">Премиальные пластиковые карты</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="">Расчеты при покупке недвижимости<br> с использованием
+                                    <a href="calculations.html">Расчеты при покупке недвижимости<br> с использованием
                                         аккредитива</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
