--- a/src/html/inc/private-menu.html
+++ b/src/html/inc/private-menu.html
@@ -40,8 +40,8 @@
                 <p class="page__text current__text">Консультирование</p>
             </a>
         </div>
-        <div class="page-item" id="">
-            <a class="page-link" href="">
+        <div class="page-item" id="lifestyle">
+            <a class="page-link" href="lifestyle.html">
                 <svg class="page__more">
                     <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-transactions" />
                 </svg>
