Small bug fixes

--- a/src/html/exchanges.html
+++ b/src/html/exchanges.html
@@ -1,6 +1,6 @@
 <%- include('inc/header.html') %>
 	<%- include('inc/client-menu.html') %>
-		<div id="info" data-current-id="online-bank" data-main-menu-current-id="private-client-head"></div>
+		<div id="info" data-current-id="coins" data-main-menu-current-id="private-client-head"></div>
 		<!-- Main content-->
 		<section>
 			<div class="container">
