--- a/src/html/inc/header.html
+++ b/src/html/inc/header.html
@@ -88,6 +88,9 @@
 						<div class="header-menu__top-menu-item">
 							<a href="#">Новости</a>
 						</div>
+						<div class="header-menu__top-menu-item">
+							<a href="#">Отделения/Банкоматы</a>
+						</div>
 					</div>
 					<div class="header-menu__contacts text--400 text--M">
 						<div class="header-menu__contacts-icon">
