Fixed utility classes

--- a/src/html/rko.html
+++ b/src/html/rko.html
@@ -87,7 +87,7 @@
                             <div class="operations__documentation-nav">
                                 <div class="operations__docs">
                                     <div>
-                                        <h3 class="operations__documentation-title">
+                                        <h3 class="text--blue text--700 text--XL m--b-45 sm-m--b-25">
                                             Тарифы
                                         </h3>
                                     </div>
