add styles to lifestyle page

--- a/src/html/lifestyle.html
+++ b/src/html/lifestyle.html
@@ -95,15 +95,22 @@
                             </div>
                             <div class="insurance-wrap">
                                 <div class="insurance-about">
-                                    <h3 class="insurance-about__title">
-                                        Международное Медицинское страхование
-                                    </h3>
-                                    <span class="insurance-about__text">
-                                        Услуги по международному медицинскому страхованию (MMС)
-                                    </span>
-                                    <span class="insurance-about__text">
-                                        Полис ММС действует по всему миру и пожизненно.
-                                    </span>
+                                    <div class="insurance-about__title">
+                                        <h3>
+                                            Международное <br>Медицинское страхование
+                                        </h3>
+                                    </div>
+                                    <div class="insurance-about__wrap-text">
+                                        <h5 class="insurance-about__text">
+                                            Услуги по международному медицинскому страхованию (MMС)
+                                        </h5>
+                                        <h5 class="insurance-about__text">
+                                            Полис ММС действует по всему миру и пожизненно.
+                                        </h5>
+                                    </div>
+                                    <div class="insurance-picture tablet-mobile">
+                                        <img src="../assets/img/images/insurance.jpg" alt="">
+                                    </div>
                                     <ul class="insurance-about__list">
                                         <li class="insurance-about__item">
                                             cтраховой лимит до 2 500 000 долларов в год;
