--- a/src/html/inc/private-menu.html
+++ b/src/html/inc/private-menu.html
@@ -32,8 +32,8 @@
                 <p class="page__text current__text">Кредиты</p>
             </a>
         </div>
-        <div class="page-item" id="">
-            <a class="page-link" href="">
+        <div class="page-item" id="consulting">
+            <a class="page-link" href="consulting.html">
                 <svg class="page__more">
                     <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-consulting" />
                 </svg>
