Couple of fixes

--- a/src/html/accountopen.html
+++ b/src/html/accountopen.html
@@ -74,7 +74,7 @@
             </div>
             <div class="operations__item">
                 <div class="operations__kind">
-                    <div class="operations__kind-item">
+                    <div class="operations__kind-item fx-el--100">
                         <h5 class="operations__kind-title">
                             Анкета на открытие счета
                         </h5>
@@ -101,7 +101,7 @@
                                     обработки данного обращения
                                 </label>
                             </div>
-                            <button class="operations__btn">
+                            <button class="operations__btn btn m--l-5">
                                 Открыть счет
                             </button>
                         </div>
